--- a/build.gradle
+++ b/build.gradle
@@ -35,9 +35,9 @@ application {
 jar {
     manifest {
         attributes(
-            'Implementation-Title': 'Bank Faker Russian',
-            'Implementation-Version': project.version,
-            'Implementation-Vendor': 'com.github.fakerussian'
+                'Implementation-Title': 'Bank Faker Russian',
+                'Implementation-Version': project.version,
+                'Implementation-Vendor': 'io.github.penolegrus'
         )
     }
 }
@@ -46,13 +46,13 @@ publishing {
     publications {
         maven(MavenPublication) {
             from components.java
-            
+
             pom {
                 name = 'Bank Faker Russian'
                 description = 'Java library for generating Russian-specific fake data: INN, OGRN, BIK, KPP, OKPO, SNILS, OKATO, correspondent accounts, settlement accounts, and cadastral numbers.'
                 url = 'https://github.com/penolegrus/bank-faker'
                 inceptionYear = '2025'
-                
+
                 licenses {
                     license {
                         name = 'MIT License'
@@ -60,7 +60,7 @@ publishing {
                         distribution = 'repo'
                     }
                 }
-                
+
                 developers {
                     developer {
                         id = 'penolegrus'
@@ -68,13 +68,13 @@ publishing {
                         email = 'info@threadqa.ru'
                     }
                 }
-                
+
                 scm {
                     connection = 'scm:git:git://github.com/penolegrus/bank-faker.git'
                     developerConnection = 'scm:git:ssh://github.com:penolegrus/bank-faker.git'
                     url = 'https://github.com/penolegrus/bank-faker/tree/main'
                 }
-                
+
                 issueManagement {
                     system = 'GitHub'
                     url = 'https://github.com/penolegrus/bank-faker/issues'
@@ -82,11 +82,10 @@ publishing {
             }
         }
     }
-    
     repositories {
         maven {
-            name = "OSSRH"
-            url = "https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/"
+            name = "Sonatype" // Имя может быть любым
+            url = "https://ossrh-staging-api.central.sonatype.com/service/local/staging/deploy/maven2/"
             credentials {
                 username = project.findProperty("ossrhUsername") ?: System.getenv("OSSRH_USERNAME")
                 password = project.findProperty("ossrhPassword") ?: System.getenv("OSSRH_PASSWORD")
@@ -96,5 +95,6 @@ publishing {
 }
 
 signing {
+    useGpgCmd()
     sign publishing.publications.maven
 }
